--- a/client/layout/index.html
+++ b/client/layout/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title><%= title %></title>
+    <link rel="stylesheet" href="dist/css/style.css" />
 </head>
 
 <body>
     <div id='app'></div>
-    <script type="text/javascript" src='dist/bundle.js'></script>
+    <script type="text/javascript" src='dist/js/bundle.js'></script>
 </body>
 </html>
