--- a/client/layout/index.html
+++ b/client/layout/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title><%= title %></title>
+    <link rel="stylesheet" href="http://zvzuola.github.io/css/bootstrap.css" />
     <link rel="stylesheet" href="dist/css/style.css" />
 </head>
 
